--- a/azureindex.html
+++ b/azureindex.html
@@ -50,12 +50,31 @@
 
     // create the vm
     const template = await (await fetch("azuretemplate.json")).json()
-    const parameters = await (await fetch("azuretemplateparams.json")).json()
-    parameters["adminPassword"] = "superSecretPassword123"
+    const parameters = {
+      "location": {"value": "southcentralus"},
+      "virtualMachineName": {"value": "cloudygamertest"},
+      "virtualMachineSize": {"value": "Standard_NV6"},
+      "adminUsername": {"value": "lgadmin"},
+      "storageAccountName": {"value": "cloudygamertestdisks3471"},     // needs to be globally unique
+      "virtualNetworkName": {"value": "cloudygamertest-vnet"},
+      "networkInterfaceName": {"value": "cloudygamertest7871"},
+      "networkSecurityGroupName": {"value": "cloudygamertest-nsg"},
+      "adminPassword": {"value": "superSecretPassword123"},
+      "storageAccountType": {"value": "Standard_LRS"},
+      "addressPrefix": {"value": "10.0.0.0/24"},
+      "subnetName": {"value": "default"},
+      "subnetPrefix": {"value": "10.0.0.0/24"},
+      "publicIpAddressName": {"value": "cloudygamertest-ip"},
+      "publicIpAddressType": {"value": "Dynamic"}
+    }
+
     const body = {"properties": {"template": template, "mode": "Incremental", "parameters": parameters}}
     const deploymentName = "cloudygamerdeployer"
     const x = await fetch(`https://management.azure.com/subscriptions/${subscriptionId}/resourcegroups/${resourceGroupName}/providers/Microsoft.Resources/deployments/${deploymentName}?api-version=2016-09-01`, {method: 'PUT', headers: {Authorization: `Bearer ${token}`, "Content-Type": "application/json"}, body: JSON.stringify(body)})
+    const y = await x.json()
+    if (y && y.error && y.error.message)
+      throw y.error.message + (y.error.details ? (" " + y.error.details[0].message) : "")
 
-    debugger
+    console.log("success")
   }
 </script>
