updated the provisioning script to support azure

--- a/azureindex.html
+++ b/azureindex.html
@@ -54,7 +54,7 @@
       "location": {"value": "southcentralus"},
       "virtualMachineName": {"value": "cloudygamertest"},
       "virtualMachineSize": {"value": "Standard_NV6"},
-      "adminUsername": {"value": "lgadmin"},
+      "adminUsername": {"value": "cloudygamer"},
       "storageAccountName": {"value": "cloudygamertestdisks3471"},     // needs to be globally unique
       "virtualNetworkName": {"value": "cloudygamertest-vnet"},
       "networkInterfaceName": {"value": "cloudygamertest7871"},
