now runs commands properly, but some troubles happen with Extensions switching to a Transitioning mode that breaks things

--- a/azureindex.html
+++ b/azureindex.html
@@ -1,9 +1,11 @@
 <script src="https://secure.aadcdn.microsoftonline-p.com/lib/1.0.13/js/adal.min.js"></script>
 <script src="cloudygamer-azure.js"></script>
 
-<a href="#" onclick="cga.login();">login</a>
-<a href="#" onclick="cga.logout();">logout</a>
-<a href="#" onclick="cga.test()">test</a><br/>
+<a href="#" onclick="cga.login();">login</a><br/>
+<a href="#" onclick="cga.logout();">logout</a><br/>
+<a href="#" onclick="check();">check</a><br/>
+<a href="#" onclick="createResources();">create resources</a><br/>
+<a href="#" onclick="testCommand();">test command</a><br/>
 <br/>
 
 <script type="text/javascript">
@@ -13,15 +15,19 @@
     location: "southcentralus"
   })
 
-  function test() {
-    cga.test()
+  async function check() {
+    if (await cga.doesResourceGroupExist())
+      console.log("it does!")
+    else
+      console.log("it doesnt!")
   }
 
-  function login() {
-    cga.login()
+  async function createResources() {
+    await cga.createVM("superSecret123Pass")
+    console.log("all done!")
   }
 
-  function logout() {
-    cga.logout()
+  async function testCommand() {
+    console.log(await cga.runCommand("powershell -command \"date\""))
   }
 </script>
