completed azure provisioning and ability to start/stop instances

--- a/azureindex.html
+++ b/azureindex.html
@@ -4,9 +4,15 @@
 <a href="#" onclick="cga.login();">login</a><br/>
 <a href="#" onclick="cga.logout();">logout</a><br/>
 <a href="#" onclick="check();">check</a><br/>
-<a href="#" onclick="createResources();">create resources</a><br/>
 <a href="#" onclick="testCommand();">test command</a><br/>
 <br/>
+<a href="#" onclick="createResources();">create resources</a><br/>
+<a href="#" onclick="provision();">provision</a><br/>
+<a href="#" onclick="checkProvisionStatus();">check provision status</a><br/>
+<br/>
+<a href="#" onclick="isInstanceRunning();">is instance running?</a><br/>
+<a href="#" onclick="cga.startInstance();">start instance</a><br/>
+<a href="#" onclick="cga.stopInstance();">stop instance</a><br/>
 
 <script type="text/javascript">
   const cga = new CloudyGamerAzure({
@@ -28,6 +34,21 @@
   }
 
   async function testCommand() {
+    console.log("getting the date...")
     console.log(await cga.runCommand("powershell -command \"date\""))
+  }
+
+  async function provision() {
+    await cga.provision("superSecret123Pass")
+  }
+
+  async function checkProvisionStatus() {
+    console.log("getting status...")
+    console.log(await cga.checkProvisionStatus())
+  }
+
+  async function isInstanceRunning() {
+    console.log("getting instance status...")
+    console.log(await cga.runningStatus())
   }
 </script>
