added ability to restart azure instance

--- a/azureindex.html
+++ b/azureindex.html
@@ -12,6 +12,7 @@
 <br/>
 <a href="#" onclick="isInstanceRunning();">is instance running?</a><br/>
 <a href="#" onclick="cga.startInstance();">start instance</a><br/>
+<a href="#" onclick="cga.restartInstance();">restart instance</a><br/>
 <a href="#" onclick="cga.stopInstance();">stop instance</a><br/>
 
 <script type="text/javascript">
