hide azure from main screen for now (since it doesnt work)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ cloudygamer - <a href="https://github.com/lg/cloudy-gamer/">github source and he
   <summary>Cloud provider</summary>
   <div>
     <input type="radio" name="cloudProvider" id="awsRadio" checked style='margin-right: 10px; vertical-align: middle'><img src="aws.svg" style="width:100px; margin-bottom: 10px; vertical-align:middle" />
-    <input type="radio" name="cloudProvider" id="azureRadio" style='margin-left: 30px; margin-right: 10px; vertical-align: middle'><img src="azure.svg" style="width:200px; vertical-align:middle; " />
+    <!--<input type="radio" name="cloudProvider" id="azureRadio" style='margin-left: 30px; margin-right: 10px; vertical-align: middle'><img src="azure.svg" style="width:200px; vertical-align:middle; " />-->
   </div>
 </details>
 
